--- a/es/precios.html
+++ b/es/precios.html
@@ -29,7 +29,7 @@
     <!-- FB Meta tags -->
     <meta property="og:title" content="Workep: reconstruyendo la experiencia de gestión de proyectos"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:image" content="https://res.cloudinary.com/cegalvarez/image/upload/v1555274914/landingSocial../images/socialmediacover.jpg"/>
+    <meta property="og:image" content="https://res.cloudinary.com/cegalvarez/image/upload/v1555274914/landingSocial/images/socialmediacover.jpg"/>
     <meta property="og:url" content="https://workep.com"/>
     <meta property="og:description" content="Una herramienta de gestión de proyectos que es rápida, fácil de usar y totalmente integrada con G Suite"/>
 
@@ -38,7 +38,7 @@
     <meta name="twitter:site" content="@workep" />
     <meta name="twitter:title" content="Workep: reconstruyendo la experiencia de gestión de proyectos" />
     <meta name="twitter:description" content="Una herramienta de gestión de proyectos que es rápida, fácil de usar y totalmente integrada con G Suite" />
-    <meta name="twitter:image" content="https://res.cloudinary.com/cegalvarez/image/upload/v1555274914/landingSocial../images/socialmediacover.jpg" />
+    <meta name="twitter:image" content="https://res.cloudinary.com/cegalvarez/image/upload/v1555274914/landingSocial/images/socialmediacover.jpg" />
 
     <title>Precios de Workep - Gratuito, Growth y Enterprise. Encuentra el plan que más se adapte a tus necesidades.</title>
 
