--- a/es/socios.html
+++ b/es/socios.html
@@ -349,93 +349,98 @@
 </div>
 
 <footer class="main_footer">
-  <div class="foot_top">
-    <div class="container">
-      <div class="foot_top_row">
-        <div class="foot1">
-          <a href="https://workep.com/" class="footer_logo"><img src="../../images/logo.png" alt=""></a>
-          <p>©2019 Workep,Inc. todos los derechos reservados<br>
-            <!-- <span><a href="tel:+12010000000">+1 (510) 000-0000</a></span> -->
-          </p>
-          <span class="madeby">Hecho con <i><img src="../../images/heart_im.png" alt="workep made with love "></i> por Workep</span>
-        </div>
-        <div class="foot2">
-          <h4>Producto</h4>
-          <ul class="links_all">
-            <li><a href="https://workep.com/es/producto.html">Características</a></li>
-            <!-- <li><a href="#url">Integrations </a></li> -->
-            <!-- <li><a href="#url">Users guide </a></li> -->
-            <li><a href="https://workep.com/es/casosdeuso.html">Casos de uso </a></li>
-            <li><a href="https://projectmanagement.workep.com/request-demo">Solicitar un demo </a></li>
-            <li><a href="https://projectmanagement.workep.com/contact-sales">Contactar a ventas</a></li>
-            <li><a href="https://workep.com/es/hechoparagoogle.html">Hecho para Google</a></li>
-          </ul>
-        </div>
-        <div class="foot3">
-          <h4>Workep</h4>
-          <ul class="links_all">
-            <li><a href="https://workep.com/es/precios.html">Precios</a></li>
-            <li><a href="https://angel.co/workep/jobs">Trabaja con nosotros</a></li>
-            <li><a href="https://workep.com/es/socios.html">Socios</a></li>
-            <!--<li><a href="#url">Press Kit</a></li>-->
-          </ul>
-        </div>
-        <div class="foot4">
-          <h4>Recursos</h4>
-          <ul class="links_all">
-            <li><a href="https://blog.workep.com/es/">Blog</a></li>
-            <!-- <li><a href="#url">Ebooks </a></li> -->
-            <li><a href="https://www.youtube.com/channel/UCt3GbHNB2il6tiXxoXtukUQ">Videos</a></li>
-            <li><a href="https://help.workep.com/">Centro de ayuda</a></li>
-            <li><a href="https://projectmanagement.workep.com/everything-you-need-to-know-about-project-management">Guía gestión de proyectos</a></li>
-          </ul>
-          <h4>Legal</h4>
-          <ul class="links_all">
-            <li><a href="https://workep.com/privacy-policy.html">Política de privacidad</a></li>
-            <li><a href="https://workep.com/terms.html">Términos del servicio</a></li>
-          </ul>
-        </div>
-        <div class="foot5">
-          <h4>Contacto</h4>
-          <ul class="soc_link">
-             <li><a href="https://twitter.com/workep" target="_blank"><img src="../../images/con_ic2.png" alt=""></a></li>
-             <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="../../images/con_ic3.png" alt=""></a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="foot_bot">
-    <div class="container">
-      <div class="foot_bot_row">
-        <div class="footlanguage">
-         <div class="footlanguage_select">
-            <select onchange="if (this.value) window.location.href=this.value">
-              <option value="https://workep.com/" selected>English</option>
-              <option value="https://workep.com/es/es.html">Español</option>
-            </select>
-         </div>
-        </div>
-        <div class="foot_bot_blog">
-          <a href="https://blog.workep.com/">Blog</a>
-        </div>
-        <div class="foot_bot_soc">
-          <ul>
-            <li><a href="https://twitter.com/workep" target="_blank"><img src="../../images/twit.svg" alt="workep twitter"></a></li>
-            <li><a href="https://www.facebook.com/workepapp" target="_blank"><img src="../../images/fb.svg" alt="workep facebook"></a></li>
-            <li><a href="https://www.instagram.com/workepapp" target="_blank"><img src="../../images/ins.svg" alt="workep instagram"></a></li>
-          </ul>
-        </div>
-        <div class="app_storelink">
-          <ul>
-            <li><a href="https://play.google.com/store/apps/details?id=com.workep.app"><img src="../../images/google_play.png" alt="workep android"></a></li>
-            <li><a href="#url"><img src="../../images/app_store.png" alt="workep iOS"></a></li>
-          </ul>
+    <div class="foot_top">
+      <div class="container">
+        <div class="foot_top_row">
+          <div class="foot1">
+            <a href="https://workep.com/" class="footer_logo"><img src="../images/logo.png" alt=""></a>
+            <p>©2019 Workep,Inc. todos los derechos reservados<br>
+              <!-- <span><a href="tel:+12010000000">+1 (510) 000-0000</a></span> -->
+            </p>
+            <span class="madeby">Hecho con <i><img src="../images/heart_im.png" alt="workep made with love "></i> por Workep</span>
+          </div>
+          <div class="foot2">
+            <h4>Producto</h4>
+            <ul class="links_all">
+              <li><a href="https://workep.com/es/producto.html">Características</a></li>
+              <!-- <li><a href="#url">Integrations </a></li> -->
+              <!-- <li><a href="#url">Users guide </a></li> -->
+              <!-- <li><a href="https://workep.com/es/casosdeuso.html">Casos de uso </a></li> -->
+              <li><a href="https://projectmanagement.workep.com/request-demo">Solicitar un demo </a></li>
+              <li><a href="https://projectmanagement.workep.com/contact-sales">Contactar a ventas</a></li>
+              <li><a href="https://workep.com/es/hechoparagoogle.html">Hecho para Google</a></li>
+              <li><a href="https://workep.com/es/workep-para-educacion.html">Workep Para Educación</a></li>
+            </ul>
+          </div>
+          <div class="foot3">
+            <h4>Workep</h4>
+            <ul class="links_all">
+              <li><a href="https://workep.com/es/precios.html">Precios</a></li>
+              <li><a href="https://angel.co/workep/jobs">Trabaja con nosotros</a></li>
+              <li><a href="https://workep.com/es/socios.html">Socios</a></li>
+              <!--<li><a href="#url">Press Kit</a></li>-->
+            </ul>
+          </div>
+          <div class="foot4">
+            <h4>Recursos</h4>
+            <ul class="links_all">
+              <li><a href="https://blog.workep.com/es/">Blog</a></li>
+              <!-- <li><a href="#url">Ebooks </a></li> -->
+              <li><a href="https://www.youtube.com/channel/UCt3GbHNB2il6tiXxoXtukUQ">Videos</a></li>
+              <li><a href="https://help.workep.com/">Centro de ayuda</a></li>
+              <li><a href="https://projectmanagement.workep.com/everything-you-need-to-know-about-project-management">Guía gestión de proyectos</a></li>
+            </ul>
+            <h4>Legal</h4>
+            <ul class="links_all">
+              <li><a href="https://workep.com/privacy-policy.html">Política de privacidad</a></li>
+              <li><a href="https://workep.com/terms.html">Términos del servicio</a></li>
+            </ul>
+          </div>
+          <div class="foot5">
+            <h4>Contacto</h4>
+            <ul class="soc_link">
+               <li><a href="https://twitter.com/workep" target="_blank"><img src="../images/con_ic2.png" alt=""></a></li>
+               <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="../images/con_ic3.png" alt=""></a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</footer>
+    <div class="foot_bot">
+      <div class="container">
+        <div class="foot_bot_row">
+          <div class="footlanguage">
+           <div class="footlanguage_select">
+              <select onchange="if (this.value) window.location.href=this.value">
+                <option value="https://workep.com/" selected>English</option>
+                <option value="https://workep.com/es/es.html">Español</option>
+              </select>
+           </div>
+          </div>
+          <div class="foot_bot_blog">
+            <a href="https://blog.workep.com/">Blog</a>
+          </div>
+          <div class="foot_bot_soc">
+            <ul>
+              <li><a href="https://twitter.com/workep" target="_blank"><img src="../images/twit.svg" alt="workep twitter"></a></li>
+              <li><a href="https://www.facebook.com/workepapp" target="_blank"><img src="../images/fb.svg" alt="workep facebook"></a></li>
+              <li><a href="https://www.instagram.com/workepapp" target="_blank"><img src="../images/ins.svg" alt="workep instagram"></a></li>
+            </ul>
+          </div>
+
+          <!--
+          <div class="app_storelink">
+            <ul>
+              <li><a href="https://play.google.com/store/apps/details?id=com.workep.app"><img src="../images/google_play.png" alt="workep android"></a></li>
+              <li><a href="#url"><img src="../images/app_store.png" alt="workep iOS"></a></li>
+            </ul>
+          </div>
+          -->
+
+        </div>
+      </div>
+    </div>
+  </footer>
 
   	<!-- Jquery-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
