#10 partners fixed up
done

--- a/es/socios.html
+++ b/es/socios.html
@@ -246,7 +246,7 @@
                 <div class="othercounter_box_percent">
                    <span class="countnew">24</span>
                 </div>
-                <p>Creación de Google Docs.</p>
+                <p>Creación de Google Docs</p>
               </div>
             </div>
             <div class="col-md-3 col-6 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1s">
@@ -255,9 +255,9 @@
                   <img src="../images/google_calender.png" alt="Google Calendar workep" style="max-width: 62%;">
                 </figure>
                 <div class="othercounter_box_percent">
-                   <span class="countnew">90</span>
+                   <span>20k</span>
                 </div>
-                <p>Enganche inicial.</p>
+                <p>Eventos creados cada mes</p>
               </div>
             </div>
             <div class="col-md-3 col-6 wow bounceInUp" data-wow-delay="0.3s" data-wow-duration="1s">
@@ -266,9 +266,9 @@
                   <img src="../images/gmail_addon.png" alt="gmail workep" style="max-width: 80%;">
                 </figure>
                 <div class="othercounter_box_percent">
-                   <span class="countnew">24</span>
+                   <span class="countnew">12</span>
                 </div>
-                <p>Creación de Google Docs.</p>
+                <p>Incremento en la actividad del email</p>
               </div>
             </div>
             <div class="col-md-3 col-6 wow bounceInUp" data-wow-delay="0.4s" data-wow-duration="1s">
@@ -277,9 +277,9 @@
                   <img src="../images/bulb.png" alt="">
                 </figure>
                 <div class="othercounter_box_percent">
-                   <span class="countnew">90</span>
+                   <span class="countnew">75</span>
                 </div>
-                <p>Enganche inicial.</p>
+                <p>Menos tiempo de adopción</p>
               </div>
             </div>
           </div>
@@ -332,7 +332,7 @@
     <div class="join_our_family_im">
       <img src="../images/join-our-family.png" alt="">
       <div class="join_our_family_con">
-        <h2>Join our family today!</h2>
+        <h2>¡Únete a nuestra comunidad hoy!</h2>
         <a href="#url" class="signupgoogle"><span>CONVIÉRTETE EN SOCIO</span></a>
       </div>
     </div>
