--- a/partners.html
+++ b/partners.html
@@ -245,7 +245,7 @@
                 <div class="othercounter_box_percent">
                    <span class="countnew">24</span>
                 </div>
-                <p>Google Docs creation.</p>
+                <p>Google Docs creation</p>
               </div>
             </div>
             <div class="col-md-3 col-6 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1s">
@@ -254,9 +254,9 @@
                   <img src="images/google_calender.png" alt="Google Calendar workep" style="max-width: 62%;">
                 </figure>
                 <div class="othercounter_box_percent">
-                   <span class="countnew">90</span>
+                   <span >20k</span>
                 </div>
-                <p>Initial engagement.</p>
+                <p>Calendar events every month</p>
               </div>
             </div>
             <div class="col-md-3 col-6 wow bounceInUp" data-wow-delay="0.3s" data-wow-duration="1s">
@@ -265,9 +265,9 @@
                   <img src="images/gmail_addon.png" alt="gmail workep" style="max-width: 80%;">
                 </figure>
                 <div class="othercounter_box_percent">
-                   <span class="countnew">24</span>
+                   <span class="countnew">12</span>
                 </div>
-                <p>Google docs creation.</p>
+                <p>Increase in email activity</p>
               </div>
             </div>
             <div class="col-md-3 col-6 wow bounceInUp" data-wow-delay="0.4s" data-wow-duration="1s">
@@ -276,9 +276,9 @@
                   <img src="images/bulb.png" alt="">
                 </figure>
                 <div class="othercounter_box_percent">
-                   <span class="countnew">90</span>
+                   <span class="countnew">75</span>
                 </div>
-                <p>Initial engagement with users.</p>
+                <p>Decrease in the adoption process</p>
               </div>
             </div>
           </div>
