--- a/es/socios.html
+++ b/es/socios.html
@@ -76,7 +76,7 @@
             <ul class="navbar-nav ml-auto">
             <li><a href="https://workep.com/es/producto.html">PRODUCTO</a></li>
              <li><a href="https://workep.com/es/hechoparagoogle.html">GESTIÓN DE PROYECTOS GOOGLE</a></li>
-             <li><a href="https://workep.com/es/casosdeuso.html">CASOS DE USO</a></li>
+             <!-- <li><a href="https://workep.com/es/casosdeuso.html">CASOS DE USO</a></li> -->
              <li><a href="https://workep.com/es/precios.html">PRECIOS</a></li>
              <li><a href="https://workep.com/es/socios.html" target="_blank">SOCIOS</a></li>
 
