--- a/es/producto.html
+++ b/es/producto.html
@@ -107,7 +107,7 @@
       <div class="section_title">
          <h2>¡La colaboración nunca ha sido tan fácil!</h2>
       </div>
-      <p>Bienvenido a Workep: la herramienta de colaboración entre empresas que es agradable y fácil de usar
+      <p>Bienvenido a Workep: la herramienta de colaboración entre empresas que es agradable, fácil de usar
 y totalmente integrado dentro de G Suite.</p>
       <div class="joinworkep_btns">
         <ul>
@@ -989,8 +989,8 @@ hitos específicos.</P>
       <div class="col-md-7 request_demo_rt">
         <h4>SOLICITA UNA DEMO</h4>
         <h3>¡EMPIEZA HOY!</h3>
-        <p>Eche un vistazo dentro de Workep para descubrir <br> todo lo que puede hacer por ti.</p>
-        <a href="https://projectmanagement.workep.com/request-demo" class="starttrial_btn">Obtenga una demo</a>
+        <p>Echa un vistazo dentro de Workep para descubrir <br> todo lo que puede hacer por ti.</p>
+        <a href="https://projectmanagement.workep.com/request-demo" class="starttrial_btn">Obtén una demo</a>
       </div>
 
     </div>
