--- a/es/workep-para-educacion.html
+++ b/es/workep-para-educacion.html
@@ -344,7 +344,7 @@
                 </div>
                 <div class="flexiblity_testi_img">
                   <figure>
-                    <img src="../images/education_testi.png" alt="">
+                    <img src="../images/peoplefaces/sibyl.png" alt="">
                   </figure>
                 </div>
 
@@ -352,7 +352,7 @@
           </div>
           <div class="user_edu_box">
             <div class="user_edu_box_logo">
-              <img src="../images/berkeley.png" alt="">
+              <img src="../images/logos/eusa.png" style="max-width: 30%" alt="">
             </div>
             <span class="rating_star1">
                 <img src="../images/ratings_star.png" alt="">
@@ -369,32 +369,7 @@
                 </div>
                 <div class="flexiblity_testi_img">
                   <figure>
-                    <img src="../images/education_testi.png" alt="">
-                  </figure>
-                </div>
-
-              </div>
-          </div>
-          <div class="user_edu_box">
-            <div class="user_edu_box_logo">
-              <img src="../images/berkeley.png" alt="">
-            </div>
-            <span class="rating_star1">
-                <img src="../images/ratings_star.png" alt="">
-            </span>
-            <div class="flexiblity_testi">
-
-                <div class="flexiblity_testi_txt">
-
-                  <div class="quotetext">
-                    <p>Workep helps us keep track of all creative work and make sure they are ready on time.</p>
-                  </div>
-                  <span class="flexiblity_testi_name">Kenneth Welch</span>
-                  <span class="flexiblity_testi_desig">Director from Berkeley</span>
-                </div>
-                <div class="flexiblity_testi_img">
-                  <figure>
-                    <img src="../images/education_testi.png" alt="">
+                    <img src="../images/peoplefaces/javier.jpeg" alt="">
                   </figure>
                 </div>
 
