--- a/es/socios.html
+++ b/es/socios.html
@@ -330,7 +330,7 @@
   </div>
   <div class="join_our_family common_gap">
     <div class="join_our_family_im">
-      <img src="../images/join-our-family.png" alt="">
+      <img src="../images/join-our-family.jpg" alt="">
       <div class="join_our_family_con">
         <h2>¡Únete a nuestra comunidad hoy!</h2>
         <a href="#url" class="signupgoogle"><span>CONVIÉRTETE EN SOCIO</span></a>
