--- a/partners.html
+++ b/partners.html
@@ -329,7 +329,7 @@
   </div>
   <div class="join_our_family common_gap">
     <div class="join_our_family_im">
-      <img src="images/join-our-family.png" alt="">
+      <img src="images/join-our-family.jpg" alt="">
       <div class="join_our_family_con">
         <h2>Join our family today!</h2>
         <a href="#url" class="signupgoogle"><span>BECOME A PARTNER</span></a>
