--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-
     <!-- Google indicator for language  -->
     <link rel="alternate" hreflang="en" href="https://workep.com/" />
     <link rel="canonical" href="https://workep.com/" />
@@ -17,7 +16,6 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-KSFSSWG');</script>
     <!-- End Google Tag Manager -->
-
 
     <!-- End Google Tag Manager -->
     <meta charset="utf-8">
@@ -129,7 +127,7 @@
   <div class="container">
     <div class="section_title">
           <h2>Made for Google</h2>
-          <p>With a single click you can run the entire G Suite into a collaboration platform. </p>
+          <p>With a single click you can turn the entire G Suite into a collaboration platform. </p>
         </div>
   </div>
   <div class="index_made_forgoogle_bot">
@@ -463,7 +461,7 @@
               <h5>Constant communication with your
               customers to avoid reprocessing:</h5>
               <p>Collaborate with your team, customers
-              and contractors on real-time while creating and launching on-time, successful marketing campaigns.</p>
+              and contractors in real-time while creating and launching on-time, successful marketing campaigns.</p>
             </div>
 
           </div>
@@ -477,8 +475,7 @@
             <div class="all_teams_sizeboxL">
               <h4>Consulting companies</h4>
               <h5>Improve the relationship with your customers by taking good care of their needs:</h5>
-              <p>Better manage your customers workflows, and always know what you need to do in order to
-meet the different projects deadlines. </p>
+              <p>Better manage your customers’ workflows, and always know what you need to do in order to meet different project deadlines.</p>
             </div>
 
           </div>
@@ -492,7 +489,7 @@ meet the different projects deadlines. </p>
             <div class="all_teams_sizeboxL">
               <h4>Development Studios</h4>
               <h5>Deliver high-quality products on time:</h5>
-              <p>Easily manage and execute software requirements, from design to final delivery without missing any deadlines.</p>
+              <p>Easily manage and execute software requirements, from design to final delivery, without missing any deadlines.</p>
             </div>
 
           </div>
@@ -506,7 +503,7 @@ meet the different projects deadlines. </p>
             <div class="all_teams_sizeboxL">
               <h4>Enterprise</h4>
               <h5>Cross-enterprise collaboration among different departments:</h5>
-              <p>Each team uses the tools they need on their day-to-day, according to their specific projects, while collaborating on company-wide projects.</p>
+              <p>Each team uses the tools they need in their day-to-day, according to their specific projects, while collaborating on company-wide projects.</p>
             </div>
 
           </div>
@@ -557,7 +554,7 @@ meet the different projects deadlines. </p>
 
               </div>
 
-              <a href="#url" class="free_trialbtn">Start your 15 days free trial</a>
+              <a href="#url" class="free_trialbtn">Start your 15-day free trial</a>
             </div>
           </div>
         </div>
