--- a/pricing.html
+++ b/pricing.html
@@ -896,7 +896,7 @@
                 <div class="faq_secbox_back" id="faq_con1">
                   <a href="#url" class="closebtn" data-src="#faq_con1"><img src="images/cancel.svg" alt=""></a>
                   <h4>How does Workep pricing work?</h4>
-                  <p>The free version of Workep is available for teams of up to 10 members without premium features. Workep Growth Plan costs $9.99 per user per month when invoiced annually and $11.99 per user per month when invoiced monthly. All prices are in US Dollars.</p>
+                  <p>The free version of Workep is available for teams of up to 10 members without premium features. Workep Growth Plan costs $9.99 per user per month when invoiced annually, and $11.99 per user per month when invoiced monthly. All prices are in US Dollars.</p>
                 </div>
               </div>
             </div>
@@ -924,7 +924,7 @@
                 <div class="faq_secbox_back" id="faq_con3">
                   <a href="#url" class="closebtn" data-src="#faq_con3"><img src="images/cancel.svg" alt=""></a>
                   <h4>Are there special prices for non-profit organizations?</h4>
-                  <p>Workep is committed to the humanitarian causes, we really believe in the people which are trying to create a better and equity world. For that reason, Non-profit organizations have a discount of 50%.</p>
+                  <p>Workep is committed to humanitarian causes, we really believe in people who are trying to create a better and more equal world. For that reason, non-profit organizations receive a discount of 50%.</p>
                 </div>
               </div>
             </div>
@@ -938,7 +938,7 @@
                 <div class="faq_secbox_back" id="faq_con4">
                   <a href="#url" class="closebtn" data-src="#faq_con4"><img src="images/cancel.svg" alt=""></a>
                   <h4>Do all members need to have G Suite?</h4>
-                  <p>No, you can have a domain to allow your teammates do the signup themselves without invitations. But you can invite Gmail users to your team too. It's not necessary that they have G Suite.</p>
+                  <p>No, you can have a domain to allow your teammates to signup themselves without invitations. But, you can invite Gmail users to your team too. It’s not necessary that they have G Suite.</p>
                 </div>
               </div>
             </div>
@@ -952,7 +952,7 @@
                 <div class="faq_secbox_back" id="faq_con5">
                   <a href="#url" class="closebtn" data-src="#faq_con5"><img src="images/cancel.svg" alt=""></a>
                   <h4>Does Workep offer any training?</h4>
-                  <p>Yes, for free teams we have the user's guide and tutorials. And for paid teams, we offer a personalized team training with one-on-one meetings and webinars</p>
+                  <p>Yes, for free teams, we have the user’s guide and tutorials. For paid teams, we offer a team training with one-on-one meetings and webinars.</p>
                 </div>
               </div>
             </div>
@@ -961,8 +961,8 @@
                 <figure><img src="images/faq_im1.png" alt=""></figure>
                 <div class="faq_secbox_front">
 
-                    <h4><a href="https://help.workep.com" target="_blank">Learn more about workep</a></h4>
-                    <p>Tips for you and your questions</p>
+                    <h4><a href="https://help.workep.com" target="_blank">Learn more about Workep.</a></h4>
+                    <p>TIPS FOR YOU AND YOUR QUESTIONS</p>
 
                 </div>
 
