--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-
   <!-- Google indicator for language  -->
   <link rel="alternate" hreflang="en" href="https://workep.com/" />
   <link rel="canonical" href="https://workep.com/" />
@@ -17,7 +16,6 @@
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-KSFSSWG');</script>
   <!-- End Google Tag Manager -->
-
 
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
@@ -146,6 +144,21 @@ Effective: May 25, 2018</p>
           <div class="right_legal_content">
             <div class="right_legal_scroll_sec">
 
+            <!-- Privacy Shield Statement -->
+
+              <h2 class="pstTitle">Workep Privacy Shield Statement</h2>
+
+              <p class="Tdescription">
+                Workep complies with the principles of the EU- U.S. Privacy Shield in relation to the collection, use, exchange, and retention of personal information transferred from the European Union. Workep has certified to the Department of Commerce that it adheres to the Privacy Shield, you can check the certification in the Privacy Shield List <a href="https://www.privacyshield.gov/list">here</a>.
+                <br/><br/>
+                If you want to learn more about the Privacy Shield, please visit <a href="https://www.privacyshield.gov/">https://www.privacyshield.gov/</a>.
+                <br/><br/>
+                If there is any conflict between the terms in this Privacy Policy and the Privacy Shield Principles, the Privacy Shield Principles shall govern.
+                <br/><br/>
+                Workep participation in the Privacy Shield does not apply to Human Resources Data.
+              </p>
+
+            <!-- End Privacy Shield Statement -->
 
             <p>When we talk about “Workep,” “we,” “our,” or “us” in this policy, we are referring to Workep, Inc., the company which provides the Services. When we talk about the “Services” in this policy, we are referring to our online workplace productivity tools and platform. Our Services are currently available for use via a web browser or applications specific to your desktop or mobile device, as further described in our Help Center.</p>
 
@@ -316,9 +329,8 @@ If you join a Team workspace and create a user account, you are a “user,” as
             <h4 id="children">7. Children’s information</h4>
             <p>Our Services are not directed to children under 13. If you learn that a child under 13 has provided us with personal information without consent, please contact us.</p>
 
-            <!--
             <h5 class="pstTitle">Privacy Shield Privacy Principles</h5>
-            <p>Workep has certified that it adheres to the Privacy Shield Privacy Principles of notice, choice, accountability for onward transfer, security, data integrity and purpose limitation, access, recourse, enforcement and liability.</p> -->
+            <p>Workep has certified that it adheres to the Privacy Shield Privacy Principles of notice, choice, accountability for onward transfer, security, data integrity and purpose limitation, access, recourse, enforcement and liability.</p>
 
             <h5>1. Notice</h5>
             <p>Workep provide you clear information relating to the processing of the personal data, like type of data collected, purpose, access and choice, conditions for onward transfers and liability, among others. </p>
@@ -326,13 +338,11 @@ If you join a Team workspace and create a user account, you are a “user,” as
             <h5>2. Choice</h5>
             <p>At all times, you may choose whether or not to provide or disclose Personal Information. You may to choose (opt out) whether your personal information is, to be disclosed to a third party or, to be used for a purpose that is materially different from the purpose for which it was originally collected.</p>
 
-            <!--
             <h5>3. Accountability for onward transfer</h5>
             <ul>
-              <li>Workep will not transfer Personal Information of EU or Swiss individuals to third parties unless such third parties have entered into an agreement in writing with us requiring them to provide at least the same level of privacy protection to your Personal Information as required by the Principles of the EU-U.S. and Swiss-U.S.</li>
-              <li>In we transfer to third parties data of EU individuals received pursuant to the EU-U.S. Privacy Shield and the Swiss-U.S. Privacy Shield, we are potentially liable, unless we demonstrate we are not responsible for the violation that rise to the damage.</li>
+              <li>Workep will not transfer Personal Information of EU individuals to third parties unless such third parties have entered into an agreement in writing with us requiring them to provide at least the same level of privacy protection to your Personal Information as required by the Principles of the EU-U.S.</li>
+              <li>In we transfer to third parties data of EU individuals received pursuant to the EU-U.S. Privacy Shield, we are potentially liable, unless we demonstrate we are not responsible for the violation that rise to the damage.</li>
             </ul>
-          -->
 
             <h5>3. Security</h5>
             <p>Workep takes security seriously. We take various steps to protect information you provide to us from loss, misuse, and unauthorized access or disclosure. These steps take into account the sensitivity of the information we collect, process and store, and the current state of technology.</p>
@@ -345,12 +355,11 @@ If you join a Team workspace and create a user account, you are a “user,” as
               We may reject a request if we must keep that information for legitimate business or legal purposes.<br/>
               You can also deactivate or delete your account permanently.</p>
 
-              <!--
             <h5>7. Recourse, Enforcement and Liability</h5>
             <p>
-              Workep commits to resolve any Privacy Shield complaints, you should first contact Workep via email at: <a href="mailto:michelle@workep.com">michelle@workep.com</a>, <b>(+1)7875659683</b> or by postal mail sent to:<br/>
-              Offices at 11930 NORTH BAYSHORE,</br>
-              Miami, FL, 33181.</br>
+              Workep commits to resolve any Privacy Shield complaints, you should first contact Workep via email at: <a href="mailto:eduardo@workep.com">eduardo@workep.com</a>, <b>(+1)5107178773</b> or by postal mail sent to:<br/>
+              2150 Shattuck Ave,</br>
+              Berkeley, CA 94704.</br>
               USA</br></br>
 
               If there are still unresolved Privacy Shield complains you can reach a non-profit alternative dispute resolution provider located in the United States to assist with the complaint resolution process or and independent dispute resolution body as --- , free for you. If you do not receive timely acknowledgement of your complaint, or if your complaint is not satisfactorily, you may able to invoke a binding arbitration process of the Privacy Shield: <a href="https://www.privacyshield.gov/article?id=How-to-Submit-a" >https://www.privacyshield.gov/article?id=How-to-Submit-a</a> Complaint.</br></br>
@@ -366,7 +375,7 @@ If you join a Team workspace and create a user account, you are a “user,” as
 
             </div>
             <div class="right_legal_btn">
-              <a href="https://app.workep.com/login" class="starttrial_btn">Accept and start 15 days trial</a>
+              <a href="https://app.workep.com/login" class="starttrial_btn">Accept and start 15-day trial</a>
             </div>
 
           </div>
@@ -379,7 +388,7 @@ If you join a Team workspace and create a user account, you are a “user,” as
       <div class="section_title">
         <h2>Join Workep today!</h2>
       </div>
-      <p>Made the most out of your G Suite with Workep, the cross-enterprise collaboration tool, that is fast, easy to use and fully integrated within G Suite.</p>
+      <p>Make the most out of your G Suite with Workep, the cross-enterprise collaboration tool, that is fast, easy-to-use and fully integrated with G Suite.</p>
       <div class="joinworkep_btns">
         <ul>
           <li><a href="https://app.workep.com/login" class="signupgoogle"><span>SIGN UP WITH GOOGLE</span></a></li>
