--- a/product.html
+++ b/product.html
@@ -260,7 +260,7 @@ their success, and adapt to issues to avoid major failures.</P>
                <div class="justlike_google_block common_gap wow fadeInRight" data-wow-duration="1s" data-wow-delay="1s">
                 <div class="section_title">
                   <h2>Timetracker</h2>
-                  <p>Track your time, categorize it by project and task, and make your team more productivity.</p>
+                  <p>Track your time, categorize it by project and task, and make your team more productive.</p>
 
                 </div>
                 <div class="justlike_google_block_im">
