--- a/terms.html
+++ b/terms.html
@@ -316,7 +316,7 @@ If a Non-Workep Product is enabled for Customer’s team, please be mindful of a
 
             </div>
             <div class="right_legal_btn">
-              <a href="#url" class="starttrial_btn">Accept and start 15 days trial</a>
+              <a href="#url" class="starttrial_btn">Accept and start 15-day trial</a>
             </div>
 
           </div>
@@ -329,7 +329,7 @@ If a Non-Workep Product is enabled for Customer’s team, please be mindful of a
       <div class="section_title">
         <h2>Join Workep today!</h2>
       </div>
-      <p>Made the most out of your G Suite with Workep, the cross-enterprise collaboration tool, that is fast, easy to use and fully integrated within G Suite.</p>
+      <p>Make the most out of your G Suite with Workep, the cross-enterprise collaboration tool, that is fast, easy-to-use and fully integrated with G Suite.</p>
       <div class="joinworkep_btns">
         <ul>
           <li><a href="https://app.workep.com/login" class="signupgoogle"><span>SIGN UP WITH GOOGLE</span></a></li>
