--- a/madeforgoogle.html
+++ b/madeforgoogle.html
@@ -472,7 +472,7 @@
       <div class="section_title">
         <h2>Join Workep today!</h2>
       </div>
-      <p>Made the most out of your G Suite with Workep, the cross-enterprise collaboration tool, that is fast, easy to use and fully integrated within G Suite.</p>
+      <p>Make the most out of your G Suite with Workep, the cross-enterprise collaboration tool, that is fast, easy-to-use and fully integrated with G Suite.</p>
       <div class="joinworkep_btns">
         <ul>
           <li><a href="https://app.workep.com/login" class="signupgoogle"><span>SIGN UP WITH GOOGLE</span></a></li>
