--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -78,9 +78,10 @@
                 <a href="https://blog.workep.com/" target="_blank">RESOURCES</a>
                 <span class="clickD"></span>
                 <ul class="sub-menu">
+                  <li><a href="https://docs.google.com/presentation/d/12OPs8ZAZ_m5WIX82-obhGP4He2RKttbsfXPEMFbbusg/present?slide=id.p" target="_blank">USER'S GUIDE</a></li>
                     <li><a href="https://blog.workep.com/" target="_blank">BLOG</a></li>
                     <li><a href="https://help.workep.com/" target="_blank">HELP CENTER</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=coI9NjjilTM">PRODUCT VIDEO</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=7DHmD2YM1_M">PRODUCT VIDEO</a></li>
                     <li><a href="https://community.workep.com/" target="_blank">COMMUNITY</a></li>
                 </ul>
               </li>
