--- a/es/hechoparagoogle.html
+++ b/es/hechoparagoogle.html
@@ -84,9 +84,10 @@
                 <a href="https://blog.workep.com/es/" target="_blank">RECURSOS</a>
                 <span class="clickD"></span>
                 <ul class="sub-menu">
+                  <li><a href="https://docs.google.com/presentation/d/1caeMup8kqHDKAfbapdWlN8Krdd6k4azUho1AHv2wGA8/present?slide=id.p" target="_blank">GUIA DE USUARIO</a></li>
                     <li><a href="https://blog.workep.com/es/" target="_blank">BLOG</a></li>
                     <li><a href="https://help.workep.com/" target="_blank">CENTRO DE AYUDA</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=axUCR5DkzGo" target="_blank">VIDEO DE PRODUCTO</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=7DHmD2YM1_M" target="_blank">VIDEO DE PRODUCTO</a></li>
                     <li><a href="https://community.workep.com/" target="_blank">COMUNIDAD</a></li>
                 </ul>
               </li>
